fix: correcion de pruebas unitarias y generacion de mas pruebas